// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should render the ExpensesSummary component with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $32.95
  </h1>
</div>
`;

exports[`it should render the ExpensesSummary component with 3 expenses 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totalling 
    $1362.47
  </h1>
</div>
`;

exports[`it should render the ExpensesSummary component with no expenses 1`] = `
<div>
  <h1>
    Viewing no expenses
  </h1>
</div>
`;
